# AI-tutor

./: .dockerignore  .env  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml
client/: Dockerfile  README.md  fly.toml  index.html  package.json  pnpm-lock.yaml  vite.config.js
client/src/: App.jsx
client/src/Components/: Navbar.jsx
client/src/api/: axios.js
client/src/auth/: AuthContext.jsx  ProtectedRoute.jsx
client/src/pages/: Home.jsx  Lessons.jsx  Login.jsx  Payments.jsx  Quizzes.jsx  Signup.jsx
server/: .env  README.md  pyproject.toml  requirements.txt
server/app/: db.py  deps.py  main.py  models.py  schemas.py
server/routes/: _init_.py  auth.py  lessons.py  payments.py  quizzes.py
server/services/: gemini.py  intasend.py  learning.py
